[package]
name = "roko-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Roko kernel: Signal type and the six universal traits (Substrate, Scorer, Gate, Router, Composer, Policy)."

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
roko-primitives = { path = "../roko-primitives" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
blake3 = "1"
ed25519-dalek = "2"
async-trait = "0.1"
futures-core = "0.3"
futures-util = { workspace = true }
indexmap = { workspace = true }
parking_lot = "0.12"
regex = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
rkyv = { version = "0.8", optional = true }

[features]
default = []
rkyv = ["dep:rkyv"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "engram_bench"
harness = false

[package.metadata.roko]
layer = 1
