[package]
name = "roko-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Manifest-driven deploy + fixtures + agent-spawn orchestrator for the roko demo environment."

[lints]
workspace = true

[[bin]]
name = "roko-demo"
path = "src/main.rs"

[dependencies]
roko-chain = { path = "../roko-chain", features = ["alloy-backend"] }
alloy = { version = "1", features = ["full"] }
alloy-primitives = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.roko]
layer = 2
