[package]
name = "roko-fs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Filesystem-backed Substrate for Roko: JSONL-append-only persistence with in-memory index."

[lints]
workspace = true

[features]
default = []
hdc = ["dep:bardo-primitives", "dep:base64"]

[dependencies]
roko-core = { path = "../roko-core" }
bardo-primitives = { path = "../bardo-primitives", optional = true }
async-trait = "0.1"
base64 = { workspace = true, optional = true }
tokio = { workspace = true, features = ["fs", "sync", "io-util", "rt", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
parking_lot = "0.12"
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
filetime = "0.2"
