[package]
name = "roko-gate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Concrete Gate implementations for Roko: compile, test, lint, symbol, and shell-based verification."

[lints]
workspace = true

[dependencies]
roko-core = { path = "../roko-core" }
roko-agent = { path = "../roko-agent" }
async-trait = "0.1"
tokio = { workspace = true, features = ["process", "time", "rt", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
roko-std = { path = "../roko-std" }
