[package]
name = "roko-golem"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Scaffold crate for future Golem subsystems (mortality, daimon, dreams, hypnagogia, grimoire, chain witness)."

[lints]
workspace = true

[features]
default = []
scaffold = []
