[package]
name = "roko-graph"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Graph execution engine: DAG types, TOML loader, CellRegistry, and topological sort."

[lints]
workspace = true

[dependencies]
roko-core = { path = "../roko-core" }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
indexmap = { workspace = true }
petgraph = "0.7"
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[package.metadata.roko]
layer = 2
