[package]
name = "roko-graph"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Graph execution engine: DAG types, TOML loader, CellRegistry, and topological sort."

[lints]
workspace = true

[dependencies]
roko-core = { path = "../roko-core" }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
indexmap = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }

[dependencies.tokio]
workspace = true
features = ["process", "time", "rt", "macros"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[package.metadata.roko]
layer = 2
