[package]
name = "roko-lang-go"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Go language provider and build system for roko-core traits."

[lints]
workspace = true

[dependencies]
roko-core = { path = "../roko-core" }

[dev-dependencies]

[package.metadata.roko]
layer = 2
