[package]
name = "roko-mcp-code"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP server exposing code-intelligence tools backed by roko-index"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
roko-core = { path = "../roko-core" }
roko-index = { path = "../roko-index" }
roko-mcp-stdio = { path = "../roko-mcp-stdio" }
