[package]
name = "roko-mcp-scripts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP server that wraps arbitrary scripts as tools"

[lints]
workspace = true

[[bin]]
name = "roko-mcp-scripts"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
roko-mcp-stdio = { path = "../roko-mcp-stdio" }
