[package]
name = "roko-mcp-slack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP server exposing Slack Web API as tools for roko agents"

[lints]
workspace = true

[[bin]]
name = "roko-mcp-slack"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
roko-mcp-stdio = { path = "../roko-mcp-stdio" }
